tests/paczka1/fuzzy1/57334302.err
Error in line 17: 5ZhNz A770 47,5
Error in line 13: QkHwwXj5 S934 41,0
Error in line 31: QkHwwXj5 Sº83 53,3
Error in line 28: BUgfTpeLEf S934 68,4
Error in line 24: QkHwwXj5 A485 8,2
Error in line 33: QkHwwXj5 S283 197,2
Error in line 32: BUgfTpeLEf S283 57,3
Error in line 37: M17fUlv S934 75,2
